# earthquake-talker-light

./: .env.example  .gitignore  PLAN.md  README.md  SPEC.md  main.py  pyproject.toml
earthquake_talker_light/: __init__.py  config.py  http.py  message.py  state.py  telegram.py
earthquake_talker_light/sources/: __init__.py  micro.py  overseas.py  pews.py
scripts/: run.bat  run.sh
tests/: test_config.py  test_http.py  test_micro.py  test_overseas.py  test_pews.py  test_telegram.py
